--- a/crmeb/crmeb-admin/src/main/resources/application.yml
+++ b/crmeb/crmeb-admin/src/main/resources/application.yml
@@ -3,11 +3,11 @@ crmeb:
   version: CRMEB-JAVA-KY-v1.3.4 # 当前代码版本
   domain: #配合swagger使用 # 待部署域名
   wechat-api-url:  #请求微信接口中专服务器
-  wechat-js-api-debug: false #微信js api系列是否开启调试模式
+  wechat-js-api-debug: true #微信js api系列是否开启调试模式
   wechat-js-api-beta: true #微信js api是否是beta版本
-  asyncConfig: false #是否同步config表数据到redis
+  asyncConfig: true #是否同步config表数据到redis
   asyncWeChatProgramTempList: false #是否同步小程序公共模板库
-  imagePath: /你的项目绝对路径/crmebimage/ # 服务器图片路径配置 斜杠结尾
+  imagePath: C:/CODE/crmeb_java/crmeb/crmebimage/ # 服务器图片路径配置 斜杠结尾
   database: mysql
 
 # 配置端口
@@ -39,7 +39,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.120.20:3307/Crmeb?characterEncoding=utf-8&useSSL=false&serverTimeZone=GMT+8
+    url: jdbc:mysql://192.168.120.20:3307/Crmeb?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: root
 
