--- a/crmeb/crmeb-common/pom.xml
+++ b/crmeb/crmeb-common/pom.xml
@@ -18,6 +18,13 @@
     </properties>
 
     <dependencies>
+        <!--支付宝 SDK-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.22.57.ALL</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
