--- a/FanGouShop-API/FanGouShop-API-Admin/src/main/resources/application.yml
+++ b/FanGouShop-API/FanGouShop-API-Admin/src/main/resources/application.yml
@@ -7,7 +7,7 @@ crmeb:
   wechat-js-api-beta: true #微信js api是否是beta版本
   asyncConfig: true #是否同步config表数据到redis
   asyncWeChatProgramTempList: false #是否同步小程序公共模板库
-  imagePath: C:/CODE/crmeb_java/ # 服务器图片路径配置 斜杠结尾
+  imagePath: C:/CODE/FanGouShop/ # 服务器图片路径配置 斜杠结尾
   database: mysql
 
 # 配置端口
@@ -39,7 +39,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.120.20:3307/Crmeb?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://192.168.120.20:3307/FanGouShop?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: root
 
