--- a/FanGouShop-API/FanGouShop-API-Front/src/main/resources/application.yml
+++ b/FanGouShop-API/FanGouShop-API-Front/src/main/resources/application.yml
@@ -1,6 +1,5 @@
-# CRMEB 相关配置
 crmeb:
-  version: CRMEB-JAVA-KY-v1.3.4 # 当前代码版本
+  version: FanGouShop-v1.0.0 # 当前代码版本
 
 # 配置端口
 server:
@@ -24,7 +23,7 @@ spring:
   resources:
     static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${crmeb.filePath}
   application:
-    name: cemrb-front #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
+    name: FanGouShop-front #这个很重要，这在以后的服务与服务之间相互调用一般都是根据这个name
   jackson:
     locale: zh_CN
     time-zone: GMT+8
@@ -33,11 +32,11 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.120.20:3307/FanGouShop?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3307/FanGouShop?characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: root
   redis:
-    host: 192.168.120.20 #地址
+    host: 127.0.0.1 #地址
     port: 6379 #端口
     password:
     timeout: 30000 # 连接超时时间（毫秒）
